# MLOps_labs

./: .env.example  .gitignore  .ignore  README.md  dvc.yaml  main.py  opencode.json  pyproject.toml  trainer.py
.dvc/: config
.hydra/: hydra.yaml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/: config.yaml
data/processed/: train-test.parquet  train-train.parquet
outputs/2026-04-23/18-51-22/.hydra/: hydra.yaml
outputs/2026-04-23/18-53-34/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-23/18-55-26/.hydra/: hydra.yaml
outputs/2026-04-23/19-01-41/.hydra/: hydra.yaml
outputs/2026-04-23/21-27-44/.hydra/: hydra.yaml
outputs/2026-04-23/21-29-27/.hydra/: hydra.yaml
outputs/2026-04-23/21-34-10/.hydra/: hydra.yaml
outputs/2026-04-23/21-36-21/.hydra/: hydra.yaml
outputs/2026-04-23/21-41-42/.hydra/: hydra.yaml
outputs/2026-04-23/21-47-04/.hydra/: hydra.yaml
outputs/2026-04-23/21-50-02/.hydra/: hydra.yaml
outputs/2026-04-25/23-16-58/.hydra/: hydra.yaml
outputs/2026-04-25/23-20-43/.hydra/: hydra.yaml
outputs/2026-04-25/23-21-27/.hydra/: hydra.yaml
outputs/2026-04-25/23-27-21/.hydra/: hydra.yaml
outputs/2026-04-25/23-29-24/.hydra/: hydra.yaml
outputs/2026-04-25/23-31-08/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-25/23-32-24/.hydra/: hydra.yaml
outputs/2026-04-25/23-32-43/.hydra/: hydra.yaml
outputs/2026-04-25/23-35-27/.hydra/: hydra.yaml
outputs/2026-04-25/23-36-47/.hydra/: hydra.yaml
outputs/2026-04-25/23-37-23/.hydra/: hydra.yaml
outputs/2026-04-25/23-37-59/.hydra/: hydra.yaml
outputs/2026-04-26/00-08-16/.hydra/: hydra.yaml
outputs/2026-04-26/00-08-41/.hydra/: hydra.yaml
outputs/2026-04-26/00-08-44/.hydra/: hydra.yaml
outputs/2026-04-26/00-10-41/.hydra/: hydra.yaml
outputs/2026-04-26/00-12-42/.hydra/: hydra.yaml
outputs/2026-04-26/00-14-23/.hydra/: hydra.yaml
outputs/2026-04-26/00-15-44/.hydra/: hydra.yaml
outputs/2026-05-02/21-59-06/.hydra/: hydra.yaml
outputs/2026-05-02/21-59-10/.hydra/: hydra.yaml
outputs/2026-05-02/21-59-16/.hydra/: hydra.yaml
outputs/2026-05-02/22-00-33/.hydra/: hydra.yaml
outputs/2026-05-02/22-13-04/.hydra/: hydra.yaml
outputs/2026-05-02/22-13-07/.hydra/: hydra.yaml
outputs/2026-05-02/22-13-11/.hydra/: hydra.yaml
outputs/2026-05-02/22-14-32/.hydra/: hydra.yaml
src/: logger.py
src/fake/: estimator.py
src/serving/: app.py
src/training/: data_training.py  download_data.py  evaluate.py  load_to_motherduck.py  model_evaluate.py  predict_batch.py  process_data.py  train.py  trainer.py
(+29 files in other folders)
