[project]
name = "mlops"
version = "0.0.1"
description = "Complete MLOps Pipeline for ML Practitioners"
authors = [{ name = "Ezzaldin" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "dagshub>=0.3.30,<0.4",
    "dvc>=3.33.0,<4",
    "dvc-s3>=3.2.0,<4",
    "hydra-core>=1.1.0,<2",
    "hyperopt>=0.2.5,<1",
    "kaggle>=2.0.1",
    "kagglehub>=0.3.11",
    "loguru>=0.7.2,<1",
    "numpy>=1.26.4,<2",
    "pandas>=2.0.1,<3",
    "pyarrow>=19.0.0,<20",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.6.0,<2",
    "setuptools<70.0.0",
    "skore>=0.8.2,<1",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "kaggle>=2.0.1",
    "kagglehub>=0.3.11",
]
linting = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
optional = [
    "hydra-colorlog>=1.2.0",
    "wandb>=0.19.6,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.4",
]

